--- a/src/main/resources/Reports/UserReport.jrxml
+++ b/src/main/resources/Reports/UserReport.jrxml
@@ -35,33 +35,65 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="101" splitType="Stretch">
 			<staticText>
-				<reportElement x="450" y="0" width="50" height="20" uuid="4e096ca4-d0f1-4026-9b15-57dc6c0f8282"/>
+				<reportElement x="433" y="4" width="50" height="20" uuid="4e096ca4-d0f1-4026-9b15-57dc6c0f8282"/>
 				<box rightPadding="4"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font isItalic="true"/>
+				</textElement>
 				<text><![CDATA[Date:]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="500" y="0" width="84" height="20" uuid="d0be2f1a-93f6-4dfa-888a-4dbf1f29c594"/>
+				<reportElement x="483" y="4" width="84" height="20" uuid="d0be2f1a-93f6-4dfa-888a-4dbf1f29c594"/>
+				<textElement>
+					<font isItalic="true"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="175" y="0" width="215" height="30" uuid="43359fbd-1985-47ef-a4f2-d82260797a59"/>
+				<reportElement x="103" y="0" width="225" height="30" uuid="5d5c2765-b60f-40ce-8d0f-426b4271af45">
+					<property name="local_mesure_unitheight" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement>
+					<font fontName="Copperplate Gothic Bold" size="20" isBold="true"/>
+				</textElement>
+				<text><![CDATA[BOOKBAR]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="103" y="28" width="205" height="15" uuid="fa131d08-e5cb-4f23-9c07-07cbc39df982"/>
+				<text><![CDATA[17 Kandy Road,]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="103" y="43" width="205" height="15" uuid="c2c51daf-1ae1-4a56-b8ed-c61a77cbd7fd"/>
+				<text><![CDATA[Colombo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="103" y="58" width="205" height="15" uuid="b538382b-8e49-4fda-bafb-89fda42f951a"/>
+				<text><![CDATA[0773537897]]></text>
+			</staticText>
+			<image>
+				<reportElement x="-10" y="-11" width="115" height="91" uuid="e738bdc7-4616-4559-bd6e-561ffdd44d89"/>
+				<imageExpression><![CDATA["C:/Users/REDTECH/Downloads/Bookbar.jpg"]]></imageExpression>
+			</image>
+		</band>
+	</title>
+	<pageHeader>
+		<band height="51" splitType="Stretch">
+			<staticText>
+				<reportElement x="155" y="0" width="245" height="30" uuid="43359fbd-1985-47ef-a4f2-d82260797a59"/>
 				<textElement textAlignment="Center">
-					<font fontName="Eras Bold ITC" size="22" isBold="true"/>
+					<font fontName="SansSerif" size="22" isBold="true"/>
 				</textElement>
 				<text><![CDATA[User Details Report]]></text>
 			</staticText>
 		</band>
-	</title>
-	<pageHeader>
-		<band height="22" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
 		<band height="41" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="2c980874-0804-4ed5-a79b-35d32ce588ba">
+				<reportElement mode="Opaque" x="-17" y="1" width="122" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="2c980874-0804-4ed5-a79b-35d32ce588ba">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="981c7bf5-dc42-4552-aa00-8fcc71045216"/>
 				</reportElement>
 				<box topPadding="8" leftPadding="30" bottomPadding="8" rightPadding="8">
@@ -71,76 +103,76 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font fontName="SansSerif" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[User ID]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="112" y="0" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="2b54118c-e912-4eb3-9437-338df40fcee9">
+				<reportElement mode="Opaque" x="105" y="1" width="115" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="2b54118c-e912-4eb3-9437-338df40fcee9">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d85b28ff-465b-4a51-8c30-44d9b17a8587"/>
 				</reportElement>
-				<box topPadding="8" leftPadding="30" bottomPadding="8" rightPadding="8">
+				<box topPadding="8" leftPadding="35" bottomPadding="8" rightPadding="8">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font fontName="SansSerif" size="14" isBold="true"/>
 				</textElement>
-				<text><![CDATA[User Name]]></text>
+				<text><![CDATA[Name]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="224" y="0" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="38bd73d9-2a05-49a5-ac6f-ba3608bd261c">
+				<reportElement mode="Opaque" x="220" y="1" width="110" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="38bd73d9-2a05-49a5-ac6f-ba3608bd261c">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4950a063-71c3-4d45-815d-b168103142a6"/>
 				</reportElement>
-				<box topPadding="8" leftPadding="30" bottomPadding="8" rightPadding="8">
+				<box topPadding="8" leftPadding="25" bottomPadding="8" rightPadding="8">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font fontName="SansSerif" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Address]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="336" y="0" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="6f281252-7df4-4ae2-a5dd-8738003d397a">
+				<reportElement mode="Opaque" x="330" y="1" width="130" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="6f281252-7df4-4ae2-a5dd-8738003d397a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4ad0a4c3-6e12-46a7-9987-02bd7a079ba9"/>
 				</reportElement>
-				<box topPadding="8" leftPadding="30" bottomPadding="8" rightPadding="8">
+				<box topPadding="8" leftPadding="40" bottomPadding="8" rightPadding="8">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font fontName="SansSerif" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[E-mail]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="448" y="0" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="0af4100c-6980-4476-9c96-917bed8ce2d7">
+				<reportElement mode="Opaque" x="460" y="1" width="111" height="40" forecolor="#FFFFFF" backcolor="#579DD6" uuid="0af4100c-6980-4476-9c96-917bed8ce2d7">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c7c39e51-1081-4806-913b-f777f9ec6a49"/>
 				</reportElement>
-				<box topPadding="8" leftPadding="30" bottomPadding="8" rightPadding="8">
+				<box topPadding="8" leftPadding="25" bottomPadding="8" rightPadding="8">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font fontName="SansSerif" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Password]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="31" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="112" height="30" uuid="45671e1d-697b-4708-8c21-cf31f905cf29">
+				<reportElement mode="Opaque" x="-17" y="1" width="123" height="30" backcolor="#DCEEFC" uuid="45671e1d-697b-4708-8c21-cf31f905cf29">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="981c7bf5-dc42-4552-aa00-8fcc71045216"/>
 				</reportElement>
 				<box topPadding="8" leftPadding="30">
@@ -155,7 +187,7 @@
 				<textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="111" y="0" width="113" height="30" uuid="54424147-aaca-4642-a119-a64097b930d2">
+				<reportElement mode="Opaque" x="105" y="1" width="116" height="30" backcolor="#DCEEFC" uuid="54424147-aaca-4642-a119-a64097b930d2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d85b28ff-465b-4a51-8c30-44d9b17a8587"/>
 				</reportElement>
 				<box topPadding="8" leftPadding="30">
@@ -170,7 +202,7 @@
 				<textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="223" y="0" width="112" height="30" uuid="c6be6a46-b193-4f13-8703-fba5acfba1ac">
+				<reportElement mode="Opaque" x="220" y="1" width="110" height="30" backcolor="#DCEEFC" uuid="c6be6a46-b193-4f13-8703-fba5acfba1ac">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4950a063-71c3-4d45-815d-b168103142a6"/>
 				</reportElement>
 				<box topPadding="8" leftPadding="30">
@@ -185,10 +217,10 @@
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="336" y="0" width="111" height="30" uuid="76a0160c-969c-483e-b223-d73e430dc81e">
+				<reportElement mode="Opaque" x="330" y="1" width="130" height="30" backcolor="#DCEEFC" uuid="76a0160c-969c-483e-b223-d73e430dc81e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4ad0a4c3-6e12-46a7-9987-02bd7a079ba9"/>
 				</reportElement>
-				<box topPadding="8" leftPadding="30">
+				<box topPadding="8" leftPadding="7">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -200,7 +232,7 @@
 				<textFieldExpression><![CDATA[$F{email}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="448" y="0" width="111" height="30" uuid="33ae3ba7-1b90-4c82-87af-67496c0c8c59">
+				<reportElement mode="Opaque" x="460" y="1" width="111" height="30" backcolor="#DCEEFC" uuid="33ae3ba7-1b90-4c82-87af-67496c0c8c59">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c7c39e51-1081-4806-913b-f777f9ec6a49"/>
 				</reportElement>
 				<box topPadding="8" leftPadding="40">
@@ -216,15 +248,15 @@
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="70" splitType="Stretch">
-			<textField>
-				<reportElement x="260" y="40" width="100" height="30" uuid="40a91363-e2bb-4f8e-b04d-6c9385f82925"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
+		<band height="41" splitType="Stretch">
+			<staticText>
+				<reportElement positionType="Float" mode="Opaque" x="-1" y="10" width="556" height="30" backcolor="#E6E8E9" uuid="4c9c342e-3e8b-47d2-b3c8-f255cf40f10b"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Serif" size="9" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[BOOKBAR]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
