--- a/src/main/resources/view/BooksManageForm.fxml
+++ b/src/main/resources/view/BooksManageForm.fxml
@@ -163,7 +163,7 @@
                   <TableColumn fx:id="colPrice" prefWidth="179.0" text="Price" />
               </columns>
             </TableView>
-            <JFXButton buttonType="RAISED" layoutX="8.0" layoutY="4.0" onAction="#btnHomeOnAction" prefHeight="22.0" prefWidth="43.0" style="-fx-background-radius: 50;" stylesheets="@../css/homeButton.css" text=".">
+            <JFXButton buttonType="RAISED" layoutX="8.0" layoutY="4.0" onAction="#btnHomeOnAction" prefHeight="45.0" prefWidth="56.0" style="-fx-background-radius: 50;" stylesheets="@../css/homeButton.css" text=".">
                <graphic>
                   <ImageView fitHeight="44.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -174,6 +174,9 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
+               <font>
+                  <Font size="1.0" />
+               </font>
             </JFXButton>
             <JFXButton buttonType="RAISED" layoutX="1033.0" layoutY="-6.0" onAction="#btnReportOnAction" prefHeight="57.0" prefWidth="73.0" text="." textFill="WHITE">
                <graphic>
