--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -77,7 +77,7 @@
                   <Font name="System Bold" size="35.0" />
                </font>
             </Label>
-            <JFXButton layoutX="221.0" layoutY="385.0" onAction="#btnPlaceOrderOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Place Your Order" textFill="WHITE">
+            <JFXButton layoutX="47.0" layoutY="384.0" onAction="#btnPlaceOrderOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Place Your Order" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -92,7 +92,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton layoutX="521.0" layoutY="385.0" onAction="#btnLogOutOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Log Out" textFill="WHITE">
+            <JFXButton layoutX="733.0" layoutY="385.0" onAction="#btnLogOutOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Log Out" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -100,6 +100,21 @@
                   <ImageView fitHeight="94.0" fitWidth="94.0">
                      <image>
                         <Image url="@../images/icons8-log-out-96.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </JFXButton>
+            <JFXButton layoutX="385.0" layoutY="382.0" onAction="#btnReportOnAction" prefHeight="140.0" prefWidth="290.0" style="-fx-background-color: #DC4B38;" text="Reports" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@../images/icons8-report-90.png" />
                      </image>
                   </ImageView>
                </graphic>
