--- a/src/main/resources/view/loginForm.fxml
+++ b/src/main/resources/view/loginForm.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -27,17 +28,7 @@
                   <Font name="Book Antiqua Bold" size="15.0" />
                </font>
             </Button>
-            <Label layoutX="149.0" layoutY="10.0" text="Login" textFill="#fe8722">
-               <font>
-                  <Font name="Bookman Old Style Bold" size="22.0" />
-               </font>
-            </Label>
             <TextField fx:id="txtUsername" layoutX="72.0" layoutY="99.0" prefHeight="34.0" prefWidth="213.0" promptText="Enter Usename" style="-fx-background-radius: 50;">
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor>
-            </TextField>
-            <TextField fx:id="txtPassword" layoutX="72.0" layoutY="180.0" prefHeight="34.0" prefWidth="213.0" promptText="Enter Password" style="-fx-background-radius: 50;">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
@@ -65,6 +56,12 @@
                   <Font name="Bookman Old Style Bold" size="10.0" />
                </font>
             </Label>
+            <Label layoutX="60.0" layoutY="3.0" prefHeight="48.0" prefWidth="238.0" text="WELCOME BACK !" textFill="#fe8722">
+               <font>
+                  <Font name="Bookman Old Style Bold" size="25.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="txtPassword" layoutX="71.0" layoutY="180.0" prefHeight="34.0" prefWidth="213.0" promptText="EnterPassword" style="-fx-background-radius: 50;" />
          </children>
       </Pane>
    </children>
